--- a/style.css
+++ b/style.css
@@ -8,23 +8,61 @@ body {
     background-position: 100px 100px;
     background-position: center;
 }
-h1 {
-    color: black;
+/* h1 {
+    color: #330000;
     font-size: 34;
     border-style: groove;
-    border-color: blue;
+    border-color: #3399cc;
     border-width: 5;
-    background: white;
+    background: #cdb99c;
     margin: 0 auto 0 auto;
     width: 250;
-}
-p {
-    color: black;
-    font-size: 24;
+} */
+
+.about-me {
+    color: #330000;
+    font-size: 20;
     border-style: groove;
-    border-color: blue;
-    border-width: 5;
-    background: #f7f7f8;
+    border-color: #3399cc;
+    border-width: 10;
+    background: #cdb99c;
     margin: 0 auto 0 auto;
-    width: 500;
+    width: 80%;
+    margin-top: 50;
+}
+
+.job-experience {
+    color: #330000;
+    font-size: 16;
+    border-style: groove;
+    border-color: #3399cc;
+    border-width: 10;
+    background: #cdb99c;
+    margin-left: 20;
+    width: 40%;
+    margin-top: 20;
+}
+
+.plans-after {
+    font-size: 16;
+    border-style: groove;
+    border-color: #3399cc;
+    border-width: 10;
+    background: #cdb99c;
+    margin-left: 20;
+    width: 40%;
+    margin-top: 20;
+}
+
+h1 {
+    color: #330000;
+    font-size: 25;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+hr {
+    border: none;
+    height: 10px;
+    color: #3399cc;
+    background-color: #3399cc;
 }
