I arrange my python video to make it fit into my page

--- a/style.css
+++ b/style.css
@@ -75,10 +75,21 @@ hr {
     height: 62%;
 }
 
-.resume {
-    font-size: 24;
+#my-work {
+    margin-top: 70;
+    height: 62%;
 }
 
+.resume {
+    font-size: 24;
+    color: turquoise;
+}
+a:hover {
+    color: turquoise;
+}
+a:link {
+    color: teal;
+}
 a:visited {
     color: turquoise;
 }
